--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  border: 1px solid grey;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form {
+  display: flex;
+  flex-direction: column;
+  align-content: left;
+  justify-content: start;
+  max-width: 300px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label {
+  display: flex;
+  align-content: left;
+  justify-content: start;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input {
+    min-width: 70%;
+  margin: 10px;
+  border: auto;
+  padding: 0;
 }
 
-.card {
-  padding: 2em;
+.requirements {
+  color: grey;
+  font-size: small;
+  display: flex;
+  justify-content: start;
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 
-.read-the-docs {
-  color: #888;
+.success {
+  background-color: green;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.fail {
+  color: red;
 }
